Rename frontmatter "layout" to "orientation"

--- a/src/contents/interactions/test-interaction-2.mdx
+++ b/src/contents/interactions/test-interaction-2.mdx
@@ -5,6 +5,6 @@ date: 2024-01-18
 bgImage: "https://picsum.photos/800/600?random=3"
 previewImage: "https://picsum.photos/400/300?random=4"
 position: "bottom"
-layout: "portrait"
+orientation: "portrait"
 tags: ["Astro", "GSAP"]
 ---
