--- a/src/contents/interactions/test-interaction-1.mdx
+++ b/src/contents/interactions/test-interaction-1.mdx
@@ -5,6 +5,6 @@ date: 2024-01-12
 bgImage: "https://picsum.photos/800/600?random=1"
 previewImage: "https://picsum.photos/400/300?random=2"
 position: "top"
-layout: "portrait"
+orientation: "portrait"
 tags: ["React", "Motion"]
 ---
