Add shadcn scroll-area & allow sidebar to scroll vertically

--- a/src/contents/interactions/test-interaction-2.mdx
+++ b/src/contents/interactions/test-interaction-2.mdx
@@ -13,3 +13,7 @@ tags: ["Astro", "GSAP", "JavaScript", "CSS"]
 Ad occaecat magna fugiat anim. Commodo sit dolore nisi mollit proident ad. Ex magna amet mollit sint elit fugiat commodo laborum. Qui do aliquip minim id cupidatat. Voluptate eiusmod ut voluptate non tempor. Deserunt enim elit ex officia. Nostrud anim mollit irure cupidatat.
 
 Laborum culpa culpa occaecat esse ut nisi ea tempor Lorem nisi dolor commodo. Qui qui proident ad ex id elit in deserunt esse aute aute. Est minim sint pariatur dolore qui mollit sint nulla do commodo id laboris reprehenderit nisi ipsum. Anim voluptate tempor aliquip esse. Amet dolor consectetur dolor. Quis cupidatat et mollit do ea nisi ullamco do sint consectetur non. Adipisicing labore aliquip ex reprehenderit ut fugiat ea elit ad laboris ea velit.
+
+Irure labore mollit ea est mollit elit consectetur nulla deserunt ex eu est ea non. Velit sint veniam adipisicing ut dolore ex. Mollit ut id laborum dolor labore quis voluptate. Ipsum laboris pariatur elit fugiat commodo dolore adipisicing adipisicing consectetur adipisicing est Lorem ea. Proident reprehenderit fugiat consequat. Ut magna fugiat amet officia do culpa qui dolore do est consequat sit veniam ut magna. Dolor aute laborum deserunt qui nostrud anim reprehenderit officia magna fugiat eu elit proident aliquip sunt. Pariatur non culpa nisi minim Lorem velit fugiat deserunt.
+
+Deserunt ea mollit eu incididunt qui laboris laborum aliquip. Cillum id non irure incididunt elit anim. Sit eu culpa ex Lorem laboris nostrud est reprehenderit. Fugiat amet aute occaecat cupidatat enim do minim proident eu. Sunt elit commodo duis nostrud eu culpa incididunt amet velit nostrud fugiat aute ex et. Ut est ex do enim velit. Dolore qui enim nisi labore id quis aliqua cillum ex ullamco deserunt veniam pariatur irure non.
