--- a/src/interactions/parallax-list/content.mdx
+++ b/src/interactions/parallax-list/content.mdx
@@ -3,7 +3,7 @@ title: "Parallax List Selection"
 description: "Using mouse movement to control the position of the list and the image, instead of using scroll."
 createdDate: 2025-06-22
 lastUpdatedDate: 2025-08-03
-bgImage: "https://picsum.photos/800/600?random=1"
+bgImage: "/src/interactions/parallax-list/assets/bbva.jpg"
 previewImage: "https://picsum.photos/400/300?random=2"
 position: "top"
 orientation: "portrait"
