--- a/src/interactions/parallax-list/content.mdx
+++ b/src/interactions/parallax-list/content.mdx
@@ -3,8 +3,8 @@ title: "Parallax List Selection"
 description: "Using mouse movement to control the position of the list and the image, instead of using scroll."
 createdDate: 2025-06-22
 lastUpdatedDate: 2025-08-03
-bgImage: "/src/interactions/parallax-list/assets/bbva.jpg"
-previewImage: "https://picsum.photos/400/300?random=2"
+bgImage: "/src/interactions/parallax-list/assets/john-cranko-school.jpg"
+previewVideo: "/src/interactions/parallax-list/assets/preview.mp4"
 position: "top"
 orientation: "portrait"
 tags: ["GSAP", "React"]
