Switch to cloudinary (with getUrl)

--- a/src/contents/articles/future-prediction.mdx
+++ b/src/contents/articles/future-prediction.mdx
@@ -2,6 +2,6 @@
 title: "The best way to predict the future is to invent it"
 description: "Dolor in irure tempor labore dolore cillum culpa magna minim duis cupidatat amet nisi ullamco. Pariatur ipsum cupidatat aliquip. Nulla amet enim culpa consectetur est ut magna minim veniam sunt nisi elit Lorem sit. Dolor id velit culpa do occaecat Lorem eiusmod enim ea minim consectetur deserunt ut eu."
 date: 2024-01-20
-previewImage: "https://picsum.photos/400/300?random=5"
+coverImage: "vulkan-oslo_j532cm"
 position: "bottom"
 ---
