--- a/src/interactions/page-stack/content.mdx
+++ b/src/interactions/page-stack/content.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Pages stack"
-description: "Content appears as extra pages stacked like papers, instead of the usual scroll."
+description: "Content appears as extra pages stacked like papers, or pages of a book."
 createdDate: 2025-07-07
 lastUpdatedDate: 2025-07-10
 bgImage: "john-cranko-school_xi8wyq"
@@ -12,6 +12,6 @@ tags: ["Motion", "React"]
 
 The page stack has become a common pattern for digital gardens, popularized by [Andy Matuschak's working notes](https://notes.andymatuschak.org/About_these_notes). Usually it's a combination of horizontal and vertical scrolling, but got inspiration for this transition-based version from [Khift.com](https://khift.com/).
 
-This one was originally designed as the main navigational feature for my original digital garden, but I dropped that project. So now I've repurposed it here, with the style of a magazine article. The stack shown here has 3 pages, but the positioning engine is setup so that it works with any number of pages, and also support adding or removing pages dynamically. I might add a showcase here later.
+I designed the stack as the main navigational feature for my original digital garden, but that project was dropped in favor of this current site. So now I've repurposed it here, as a showcase of the interaction. Try adding or removing pages using the controls, or click on each page to focus on it.
 
 This also works on mobile, where the stacked is displayed vertically to look like drawers instead.
