--- a/src/interactions/page-stack/content.mdx
+++ b/src/interactions/page-stack/content.mdx
@@ -2,9 +2,9 @@
 title: "Pages stack"
 description: "Content appears as extra pages stacked like papers, or pages of a book."
 createdDate: 2025-07-07
-lastUpdatedDate: 2025-07-10
-bgImage: "john-cranko-school_xi8wyq"
-previewVideo: "preview_nbl5ie"
+lastUpdatedDate: 2025-08-05
+bgImage: "elisa-kerschbaumer-eFSrad6qb3k-unsplash_nusevh"
+previewVideo: "page-stack-preview_fift9g"
 position: "bottom"
 orientation: "portrait"
 tags: ["Motion", "React"]
