Add disable sidebar to parallax list

--- a/src/interactions/parallax-list/content.mdx
+++ b/src/interactions/parallax-list/content.mdx
@@ -8,6 +8,7 @@ previewVideo: "preview_nbl5ie"
 position: "top"
 orientation: "portrait"
 tags: ["GSAP", "React"]
+disableSidebarClickOutside: true
 ---
 
 This interaction is best seen on desktop. It is inspired by the [work page](https://by-kin.com/work) of Kin studio's site. You can use the pointer to navigate the list. When hovered, we see a transition of title overlay, the subtitle text fades in, and the corresponding image appears on the right side.
