Switch back to using glob loader + */content.mdx pattern

--- a/src/works/page-stack/content.mdx
+++ b/src/works/page-stack/content.mdx
@@ -1,4 +1,5 @@
 ---
+types: ["interaction"]
 title: "Pages stack"
 description: "Content appears as extra pages stacked like papers, or pages of a book."
 createdDate: 2025-05-28
