--- a/src/works/parallax-list/content.mdx
+++ b/src/works/parallax-list/content.mdx
@@ -1,4 +1,5 @@
 ---
+types: ["interaction"]
 title: "Parallax List Selection"
 description: "Using mouse movement to control the position of the list and the image, instead of using scroll."
 createdDate: 2025-06-22
