--- a/src/works/page-stack/content.mdx
+++ b/src/works/page-stack/content.mdx
@@ -4,9 +4,13 @@ title: "Pages stack"
 description: "Content appears as extra pages stacked like papers, or pages of a book."
 createdDate: 2025-05-28
 lastUpdatedDate: 2025-08-05
-bgImage: "elisa-kerschbaumer-eFSrad6qb3k-unsplash_nusevh"
-previewVideo: "page-stack-preview_fift9g"
 floatingSidebar: true
+widget:
+  type: "video"
+  config:
+    video: "page-stack-preview_fift9g"
+    height: 400
+    position: "top"
 ---
 
 The page stack has become a common pattern for digital gardens, popularized by [Andy Matuschak's working notes](https://notes.andymatuschak.org/About_these_notes). Usually it's a combination of horizontal and vertical scrolling, but got inspiration for this transition-based version from [Khift.com](https://khift.com/).
