--- a/src/works/parallax-list/content.mdx
+++ b/src/works/parallax-list/content.mdx
@@ -4,9 +4,13 @@ title: "Parallax List Selection"
 description: "Using mouse movement to control the position of the list and the image, instead of using scroll."
 createdDate: 2025-06-22
 lastUpdatedDate: 2025-08-03
-bgImage: "john-cranko-school_xi8wyq"
-previewVideo: "preview_nbl5ie"
 disableSidebarClickOutside: true
+widget:
+  type: "preview"
+  config:
+    bgImage: "john-cranko-school_xi8wyq"
+    previewVideo: "preview_nbl5ie"
+    tone: "light"
 ---
 
 This interaction is best seen on desktop. It is inspired by the [work page](https://by-kin.com/work) of Kin studio's site. You can use the pointer to navigate the list. When hovered, we see a transition of title overlay, the subtitle text fades in, and the corresponding image appears on the right side.
