--- a/src/works/filter-layout-transition/content.mdx
+++ b/src/works/filter-layout-transition/content.mdx
@@ -1,26 +1,20 @@
 ---
 types: ["interaction", "design"]
-title: "Filter Layout Transition"
-description: "Smooth layout transitions when filtering content with different visual states and animations."
+title: "Filter Grid Layout"
+description: "An exploration of a filter grid layout with transitions."
 createdDate: 2025-08-21
-lastUpdatedDate: 2025-08-21
+lastUpdatedDate: 2025-08-26
 floatingSidebar: true
 widget:
   type: "image"
   config:
-    image: "john-cranko-school_xi8wyq"
+    image: "chair2_bs3tqs"
     alt: "Filter layout transition preview"
-    height: 400
-    position: "top"
+    position: "bottom"
 ---
 
-This work explores smooth layout transitions when filtering content. The goal is to create engaging visual feedback that feels natural and responsive when switching between different content filters.
+This piece explores two little interactions that I found interesting in the context of a grid layout, mocking a furniture catalog.
 
-The interaction will include:
+First is the hover effect, where the hovered item is enlarged, causing a layout shift. This one is seen from the sidebar navigation on [Grafik's site](https://grafik.co.nz/project/tom-gould/).
 
-- Smooth morphing animations between different layout states
-- Dynamic content rearrangement
-- Visual feedback for active filters
-- Responsive behavior across different screen sizes
-
-This is currently a placeholder implementation that will be enhanced with the actual interactive behavior.
+The other small one is the filter buttons inspired by ones over at [Nathan Riley's portfolio](https://www.nrly.co/). They have an interesting way to transition between the active and inactive states.
