Unify widgets into PreviewWidget

--- a/src/projects/filter-layout-transition/content.mdx
+++ b/src/projects/filter-layout-transition/content.mdx
@@ -7,7 +7,8 @@ lastUpdatedDate: 2025-08-26
 widget:
   type: "image"
   config:
-    image: "chair2_bs3tqs"
+    bgImage: "chair2_bs3tqs"
+    previewImage: "chair2_bs3tqs"
     alt: "Filter layout transition preview"
 ---
 
