--- a/src/projects/filter-layout-transition/content.mdx
+++ b/src/projects/filter-layout-transition/content.mdx
@@ -10,7 +10,7 @@ widget:
     bgImage: "storage1_y3hrfm"
     previewImage: "chair2_bs3tqs"
     alt: "Filter layout transition preview"
-    mediaWidth: 0.85
+    previewWidth: 0.8
 ---
 
 This piece explores two little interactions that I found interesting in the context of a grid layout, mocking a furniture catalog.
