Unify static widgets (#71)
* Unify widgets into PreviewWidget

* Remove disableSidebarClickOutside and floatingSidebar from frontmatter

* Allow specify previewWidth

* Fixes

--- a/src/projects/filter-layout-transition/content.mdx
+++ b/src/projects/filter-layout-transition/content.mdx
@@ -7,8 +7,10 @@ lastUpdatedDate: 2025-08-26
 widget:
   type: "image"
   config:
-    image: "chair2_bs3tqs"
+    bgImage: "storage1_y3hrfm"
+    previewImage: "chair2_bs3tqs"
     alt: "Filter layout transition preview"
+    previewWidth: 0.8
 ---
 
 This piece explores two little interactions that I found interesting in the context of a grid layout, mocking a furniture catalog.
