Update info & widget styling

--- a/src/projects/info-sidebar/content.mdx
+++ b/src/projects/info-sidebar/content.mdx
@@ -2,13 +2,13 @@
 types: ["interaction"]
 title: "Info Sidebar"
 description: "A collapsing/expanding information sidebar that reacts to a vertical scroll container."
-createdDate: 2025-09-01
-lastUpdatedDate: 2025-09-10
+createdDate: 2025-06-08
+lastUpdatedDate: 2025-09-11
 widget:
   type: "video"
   config:
-    bgImage: "john-cranko-school_xi8wyq"
-    previewVideo: "preview_nbl5ie"
+    bgFillClass: "bg-[#6e8375]"
+    previewVideo: "Screen_Recording_2025-09-11_at_10.39.45_igyxrr"
 ---
 
 This is a recreation of the sidebar on [Kin Studio's site](https://by-kin.com/). On their site, the sidebar is used to display information about the project, while the page itself shows a gallery of images.
