--- a/src/projects/page-stack/content.mdx
+++ b/src/projects/page-stack/content.mdx
@@ -7,7 +7,7 @@ lastUpdatedDate: 2025-08-05
 widget:
   type: "video"
   config:
-    bgImage: "bbva_mkmupf"
+    bgFillClass: "bg-[#E4ECF0]"
     previewVideo: "page-stack-preview_fift9g"
 ---
 
