Interactive widget support + opt info modal in

--- a/src/projects/info-modal/content.mdx
+++ b/src/projects/info-modal/content.mdx
@@ -6,11 +6,9 @@ lastUpdatedDate: 2025-09-12
 types:
   - interaction
 widget:
-  type: image
+  type: interactive
   config:
-    bgFillClass: bg-base-900
-    previewImage: bbva_mkmupf
-    previewWidth: 0.6
+    bgFillClass: "bg-[#715C62]"
 ---
 
 I love the playfulness of [Family's Drawer](https://emilkowal.ski/ui/family-tray-system), one of the many interactions explored in Emil Kowalski's [Animations on the Web course](https://animations.dev).
