--- a/src/projects/clock-of-clocks/content.mdx
+++ b/src/projects/clock-of-clocks/content.mdx
@@ -1,14 +1,14 @@
 ---
 title: "Clock of Clocks"
-description: "A placeholder for clock-based interactive visualization."
+description: "A digital clock made of analog clocks."
 createdDate: 2025-10-24
-lastUpdatedDate: 2025-10-24
+lastUpdatedDate: 2025-10-25
 types:
   - interaction
 widget:
   type: interactive
   config:
-    bgFillClass: "bg-slate-900"
+    bgFillClass: "bg-[#65787F]"
 ---
 
 Clock visualization project coming soon.
